2003-04-23  H.J. Lu <hjl@gnu.org>

	* gas/ia64/opc-i.s: Add testcases for valid label.
	* gas/ia64/opc-i.d: Updated.

2003-04-10  Alexandre Oliva  <aoliva@redhat.com>

	* gas/mips/elf-rel-got-n32.d, gas/mips/elf-rel-got-n32.s,
	gas/mips/elf-rel-got-n64.d, gas/mips/elf-rel-got-n64.s,
	gas/mips/elf-rel-xgot-n32.d, gas/mips/elf-rel-xgot-n64.d: New.
	* gas/mips/mips.exp: Test them.

2003-04-08  Nick Clifton  <nickc@redhat.com>

	* gas/m32r/m32r.exp: Run signed-relocs test.
        * gas/m32r/signed-relocs.s: New file: Test signed relocs.
        * gas/m32r/signed-relocs.d: New file: Expected results

	* gas/ia64/dependency-1.s: New file: Test read before write dependency.
	* gas/ia64/dependency-1.d: New file: Expected assembly results.
	* gas/ia64/ia64.exp: Run the new test.

2003-04-05  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/bug-1825.d (_table): Update.
	* gas/m68hc11/bug-1825.s (_table): Add tests for 16-bit absolute relocs

2003-04-05  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/insns.s: Add %page and %addr checks.
	* gas/m68hc11/insns12.s: Likewise.
	* gas/m68hc11/insns-dwarf2.d: Update.
	* gas/m68hc11/insns.d: Update.

2003-04-04  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips5.d: New test.
	* gas/mips/mips5.l: New test stderr listing.
	* gas/mips/mips5.s: New test source file.
	* gas/mips/mips.exp: Run the mips5 test.

2003-04-03  Philip Blundell  <philb@gnu.org>

	* gas/arm/offset.s: New test.
	* gas/arm/arm.exp (run_errors_test): Run it.

2003-04-02  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/ulh.d: Adjust for ulh and ulhu macro assembly changes.

	* gas/mips/mips.exp: Define new "gpr_ilocks" architecture
	property, and add it to mips2 (and later) chips and r3900.
	* gas/mips/uld2.s: New test source file.
	* gas/mips/ulh2.s: Likewise.
	* gas/mips/ulw2.s: Likewise.
	* gas/mips/uld2.l: New test stderr listing.
	* gas/mips/ulh2.l: Likewise.
	* gas/mips/ulw2.l: Likewise.
	* gas/mips/uld2-eb.d: New test.